Tickect detail alignment issue to be fix

--- a/src/app/module/shared/commonshared/price-calculator/price-calculator.component.scss
+++ b/src/app/module/shared/commonshared/price-calculator/price-calculator.component.scss
@@ -1,7 +1,7 @@
 .calculator {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    grid-gap: 10px;
+    grid-gap: 8px;
     max-width: 300px;
     width: 100%;
     margin: 0 auto;
@@ -22,7 +22,7 @@
     background-color: var(--ct-blue);
     color: var(--ct-white);
     border: none;
-    padding: 5px;
+    padding: 2px;
     text-align: center;
     font-size: 12px;
     cursor: pointer;
