--- a/src/app/module/tickets/ticket-detail/ticket-detail.component.scss
+++ b/src/app/module/tickets/ticket-detail/ticket-detail.component.scss
@@ -4,7 +4,7 @@ h4{
 
 .mainbox-row{
     // max-height: 110px;
-    overflow: auto;
+    overflow-y: scroll !important;
 }
 
 .cod-item {
@@ -15,11 +15,11 @@ h4{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-auto-rows: 1fr; 
-    padding: 1em;
+    padding: 0.25em;
 
     li {
         border: solid;
-        padding: 0.15em;
+        padding: 0.05em;
         display: flex;
         align-items: center;
         justify-content: center;
