--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -686,7 +686,7 @@
  .mdi-cust-upload{font-size:25px;}
  .upload-a{cursor:pointer;}
  .seller-view-tbl tr td{border:1px solid #dee2e6; padding:2px 5px;}
- .ticket-details-tbl tr td{border:1px solid #dee2e6; padding:5px;width: 15%;}
+ .ticket-details-tbl tr td{border:1px solid #dee2e6; padding:5px;}
  .ticket-details-tbl th{border:1px solid #dee2e6; padding:5px;}
  .dl-img{height:80px;}
  .menu-item .active .menu-links-text{color:yellow;}
