--- a/src/styles.scss
+++ b/src/styles.scss
@@ -214,7 +214,7 @@ padding: 2px !important;
 
 .calc {
     position: absolute;
-    top:-32px
+    top:-40px
 }
 
     @media (max-width: 767px){
